# SeriesSummarizer

./: .gitignore  INSTALLATION.md  README.md  main.py  pyproject.toml
example_chroma_db/: chroma.sqlite3
examples/: README.md  __init__.py  advanced_usage.py  basic_usage.py
src/narrator/: __init__.py  f5_tts_wrapper.py  narrator.py  utils.py
src/summarizer/: __init__.py  agent.py
src/summarizer/database/: __init__.py  chromadb_manager.py
src/summarizer/extractors/: __init__.py  base_extractor.py  character_extractor.py  plot_event_extractor.py  relationship_extractor.py  scene_segmenter.py
src/summarizer/generators/: __init__.py  summary_generator.py
src/summarizer/models/: __init__.py  character.py  episode.py  plot_event.py  relationship.py  scene.py
src/summarizer/processors/: __init__.py  episode_processor.py
src/summarizer/prompts/: character_detail_extraction.txt  character_development_analysis.txt  character_identification.txt  episode_summary.txt  general_content_summary.txt  plot_connections_analysis.txt  plot_event_identification.txt  relationship_detail_extraction.txt  relationship_pairs_identification.txt  relationship_updates_analysis.txt  scene_analysis.txt  scene_break_identification.txt
src/summarizer/queries/: __init__.py  query_interface.py
src/summarizer/utils/: __init__.py  error_handling.py  prompt_loader.py  validation.py
