[project]
name = "seriessummarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "f5-tts>=1.1.8",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langchain-community>=0.1.0",
    "chromadb>=0.4.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "networkx>=3.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
]
